# projektarbeit-ii-team-5

./: .gitignore  Arbeitsschritte Protokoll Forest Spirits.txt  LICENSE  Readme.md
cmake/: doxygen.cmake  nlohmann_json.cmake  raylib.cmake  raylib_cpp.cmake
docs/: _readme_8md.html  actor_8cpp.html  actor_8cpp__incl.map  actor_8cpp__incl.md5  actor_8cpp_source.html  actor_8h.html  actor_8h__dep__incl.map  actor_8h__dep__incl.md5  actor_8h__incl.map  actor_8h__incl.md5  actor_8h_source.html  annotated.html  annotated_dup.js  classes.html  classgame_1_1core_1_1_actor-members.html  classgame_1_1core_1_1_actor.html  classgame_1_1core_1_1_actor.js  classgame_1_1core_1_1_actor__coll__graph.map  classgame_1_1core_1_1_actor__coll__graph.md5  classgame_1_1core_1_1_game-members.html  classgame_1_1core_1_1_game.html  classgame_1_1core_1_1_game.js  classgame_1_1core_1_1_game__coll__graph.map  classgame_1_1core_1_1_game__coll__graph.md5  classgame_1_1core_1_1_renderer-members.html  classgame_1_1core_1_1_renderer.html  classgame_1_1core_1_1_renderer__coll__graph.map  classgame_1_1core_1_1_renderer__coll__graph.md5  classgame_1_1core_1_1_scene-members.html  classgame_1_1core_1_1_scene.html  classgame_1_1core_1_1_scene.js  classgame_1_1core_1_1_scene__coll__graph.map  classgame_1_1core_1_1_scene__coll__graph.md5  classgame_1_1core_1_1_scene__inherit__graph.map  (+230 more)
src/core/: CMakeLists.txt  actor.cpp  actor.h  game.cpp  game.h  renderer.cpp  renderer.h  scene.h  sprite.cpp  sprite.h  sprite_animated.cpp  sprite_animated.h  stage.cpp  stage.h  store.h  texture2d.cpp  texture2d.h
(+131 files in other folders)
